--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,5 @@ test {
     // Use junit platform for unit tests
     useJUnitPlatform()
 }
+sourceCompatibility = JavaVersion.VERSION_14
+targetCompatibility = JavaVersion.VERSION_14
